# wx-cli

./: CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
crates/wx-cli/: Cargo.toml
crates/wx-cli/src/: schema.rs  util.rs
crates/wx-cli/src/cmd/: contacts.rs  decrypt.rs  export.rs  export_media.rs  export_task.rs  key.rs  paths.rs  query.rs  search.rs  sessions.rs  watch.rs
crates/wx-cli/src/cmd/serve/: bridge.rs  event.rs  media.rs  mod.rs  refresh.rs
crates/wx-cli/src/cmd/server/: manager.rs
crates/wx-cli/tests/: ignore-filters.rs  serve-media.rs  thin_client_cli.rs
crates/wx-context/: Cargo.toml
crates/wx-context/src/: cache.rs  contact.rs  lib.rs  visibility.rs
crates/wx-db/: Cargo.toml
crates/wx-db/src/: contacts.rs  decode.rs  fts.rs  messages.rs  model.rs  open.rs  pool.rs  xml_extract.rs
crates/wx-db/tests/: contacts-sessions.rs
crates/wx-decrypt/: Cargo.toml
crates/wx-keychain/: Cargo.toml
crates/wx-keychain/src/: lib.rs  lldb.rs  process.rs  store.rs
crates/wx-media/: Cargo.toml
crates/wx-media/src/: ffmpeg.rs  hardlink.rs  key.rs  lib.rs
crates/wx-media/tests/: audio-transcode.rs  dat-decrypt.rs  voice.rs
crates/wx-monitor/: Cargo.toml
crates/wx-monitor/src/: cache.rs  monitor.rs
crates/wx-monitor/tests/: integration.rs
crates/wx-paths/src/: lib.rs  migration.rs  platform.rs
