[package]
name = "wx-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wx-cli"
path = "src/main.rs"

[features]
default = ["audio"]
audio = ["wx-media/audio"]

[dependencies]
wx-decrypt = { path = "../wx-decrypt" }
wx-keychain = { path = "../wx-keychain" }
wx-db = { path = "../wx-db" }
wx-media = { path = "../wx-media" }
wx-monitor = { path = "../wx-monitor" }
wx-context = { path = "../wx-context" }
wx-paths = { path = "../wx-paths" }
rusqlite = { version = "0.40", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
axum = { version = "0.8", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = { version = "0.5", features = ["util"] }
libc = "0.2"
lru = "0.12"
rayon = "1"

[dev-dependencies]
tempfile = "3"
silk-rs = "0.2"

[build-dependencies]
vergen-gitcl = { version = "9", features = ["build"] }
