[package]
name = "wx-context"
version.workspace = true
edition.workspace = true

[dependencies]
wx-decrypt = { path = "../wx-decrypt" }
wx-keychain = { path = "../wx-keychain" }
wx-db = { path = "../wx-db" }
wx-paths = { path = "../wx-paths" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
dashmap = "6"
rayon = "1"
rust-stemmers = "1"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
aes = "0.8"
cbc = "0.2"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
hex = "0.4"
