[package]
name = "wx-db"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.40", features = ["bundled-sqlcipher"] }
prost = "0.13"
zstd = "0.13"
md5 = "0.7"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
