[package]
name = "wx-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
wx-decrypt = { path = "../wx-decrypt" }
wx-db      = { path = "../wx-db" }
notify         = "8"
tokio          = { version = "1", features = ["rt", "sync", "time"] }
futures-core   = "0.3"
tempfile       = "3"
tracing        = "0.1"
thiserror      = "2"
serde          = { version = "1", features = ["derive"] }

[dev-dependencies]
aes      = "0.8"
cbc      = "0.1"
hmac     = "0.12"
sha2     = "0.10"
pbkdf2   = { version = "0.12", features = ["sha2"] }
rusqlite = { version = "0.40", features = ["bundled"] }
tokio    = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
